// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TEST ON FOOD COMPONENT MEAL AND MEAL DIARY: Meal Diary SnapShot:  1`] = `
<View>
  <RCTScrollView>
    <View>
      <View
        style={
          Object {
            "alignContent": "center",
            "flexDirection": "column",
            "justifyContent": "space-around",
          }
        }
      >
        <View
          style={
            Object {
              "alignContent": "center",
              "alignSelf": "center",
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "alignContent": "stretch",
                  "alignSelf": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-evenly",
                  "marginVertical": 10,
                }
              }
            >
              <Text
                style={
                  Object {
                    "alignSelf": "center",
                    "marginHorizontal": 10,
                  }
                }
              >
                [FORMATTED DATE]
              </Text>
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/calendar.png",
                  }
                }
                style={
                  Object {
                    "bottom": 10,
                    "height": 32,
                    "position": "relative",
                    "top": 0,
                    "width": 32,
                  }
                }
              />
            </View>
            <View />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignContent": "center",
            "flexDirection": "column",
            "justifyContent": "space-around",
          }
        }
      />
      <RCTSafeAreaView
        emulateUnlessSupported={true}
        style={
          Object {
            "backgroundColor": "#fff",
            "borderRadius": 15,
            "elevation": 4,
            "flexDirection": "column",
            "justifyContent": "center",
            "marginBottom": 20,
            "marginLeft": "5%",
            "shadowColor": "#000",
            "shadowOffset": Object {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.23,
            "shadowRadius": 2.62,
            "width": "90%",
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "width": "100%",
            }
          }
        >
          <View
            activeOpacity={0.2}
            style={
              Object {
                "flex": 1,
                "flexDirection": "column",
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "flexDirection": "row",
                  "opacity": 1,
                }
              }
              testID="MealID"
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/breakfast.png",
                  }
                }
                style={
                  Object {
                    "alignSelf": "center",
                    "height": 20,
                    "marginLeft": 10,
                    "width": 20,
                  }
                }
              />
              <Text
                style={
                  Object {
                    "alignSelf": "flex-start",
                    "fontSize": 20,
                    "fontWeight": "bold",
                    "justifyContent": "flex-start",
                    "marginLeft": 5,
                    "marginRight": 10,
                    "marginVertical": "14%",
                  }
                }
              >
                Breakfast
              </Text>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "flexShrink": 1,
                    "justifyContent": "flex-end",
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "baseline",
                "flexDirection": "row",
                "flexShrink": 1,
                "justifyContent": "flex-end",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/insuline.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/calories.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0.0
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/carbohydrates.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0.0
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/fat.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0.0
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/protein.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0.0
              </Text>
            </View>
          </View>
        </View>
      </RCTSafeAreaView>
      <RCTSafeAreaView
        emulateUnlessSupported={true}
        style={
          Object {
            "backgroundColor": "#fff",
            "borderRadius": 15,
            "elevation": 4,
            "flexDirection": "column",
            "justifyContent": "center",
            "marginBottom": 20,
            "marginLeft": "5%",
            "shadowColor": "#000",
            "shadowOffset": Object {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.23,
            "shadowRadius": 2.62,
            "width": "90%",
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "width": "100%",
            }
          }
        >
          <View
            activeOpacity={0.2}
            style={
              Object {
                "flex": 1,
                "flexDirection": "column",
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "flexDirection": "row",
                  "opacity": 1,
                }
              }
              testID="MealID"
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/lunch.png",
                  }
                }
                style={
                  Object {
                    "alignSelf": "center",
                    "height": 20,
                    "marginLeft": 10,
                    "width": 20,
                  }
                }
              />
              <Text
                style={
                  Object {
                    "alignSelf": "flex-start",
                    "fontSize": 20,
                    "fontWeight": "bold",
                    "justifyContent": "flex-start",
                    "marginLeft": 5,
                    "marginRight": 10,
                    "marginVertical": "14%",
                  }
                }
              >
                Lunch
              </Text>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "flexShrink": 1,
                    "justifyContent": "flex-end",
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "baseline",
                "flexDirection": "row",
                "flexShrink": 1,
                "justifyContent": "flex-end",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/insuline.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/calories.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0.0
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/carbohydrates.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0.0
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/fat.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0.0
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/protein.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0.0
              </Text>
            </View>
          </View>
        </View>
      </RCTSafeAreaView>
      <RCTSafeAreaView
        emulateUnlessSupported={true}
        style={
          Object {
            "backgroundColor": "#fff",
            "borderRadius": 15,
            "elevation": 4,
            "flexDirection": "column",
            "justifyContent": "center",
            "marginBottom": 20,
            "marginLeft": "5%",
            "shadowColor": "#000",
            "shadowOffset": Object {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.23,
            "shadowRadius": 2.62,
            "width": "90%",
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "width": "100%",
            }
          }
        >
          <View
            activeOpacity={0.2}
            style={
              Object {
                "flex": 1,
                "flexDirection": "column",
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "flexDirection": "row",
                  "opacity": 1,
                }
              }
              testID="MealID"
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/dinner.png",
                  }
                }
                style={
                  Object {
                    "alignSelf": "center",
                    "height": 20,
                    "marginLeft": 10,
                    "width": 20,
                  }
                }
              />
              <Text
                style={
                  Object {
                    "alignSelf": "flex-start",
                    "fontSize": 20,
                    "fontWeight": "bold",
                    "justifyContent": "flex-start",
                    "marginLeft": 5,
                    "marginRight": 10,
                    "marginVertical": "14%",
                  }
                }
              >
                Dinner
              </Text>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "flexShrink": 1,
                    "justifyContent": "flex-end",
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "baseline",
                "flexDirection": "row",
                "flexShrink": 1,
                "justifyContent": "flex-end",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/insuline.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/calories.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0.0
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/carbohydrates.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0.0
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/fat.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0.0
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/protein.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0.0
              </Text>
            </View>
          </View>
        </View>
      </RCTSafeAreaView>
      <RCTSafeAreaView
        emulateUnlessSupported={true}
        style={
          Object {
            "backgroundColor": "#fff",
            "borderRadius": 15,
            "elevation": 4,
            "flexDirection": "column",
            "justifyContent": "center",
            "marginBottom": 20,
            "marginLeft": "5%",
            "shadowColor": "#000",
            "shadowOffset": Object {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.23,
            "shadowRadius": 2.62,
            "width": "90%",
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "width": "100%",
            }
          }
        >
          <View
            activeOpacity={0.2}
            style={
              Object {
                "flex": 1,
                "flexDirection": "column",
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "flexDirection": "row",
                  "opacity": 1,
                }
              }
              testID="MealID"
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/snack.png",
                  }
                }
                style={
                  Object {
                    "alignSelf": "center",
                    "height": 20,
                    "marginLeft": 10,
                    "width": 20,
                  }
                }
              />
              <Text
                style={
                  Object {
                    "alignSelf": "flex-start",
                    "fontSize": 20,
                    "fontWeight": "bold",
                    "justifyContent": "flex-start",
                    "marginLeft": 5,
                    "marginRight": 10,
                    "marginVertical": "14%",
                  }
                }
              >
                Snack
              </Text>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "flexShrink": 1,
                    "justifyContent": "flex-end",
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "baseline",
                "flexDirection": "row",
                "flexShrink": 1,
                "justifyContent": "flex-end",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/insuline.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/calories.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0.0
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/carbohydrates.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0.0
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/fat.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0.0
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/protein.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0.0
              </Text>
            </View>
          </View>
        </View>
      </RCTSafeAreaView>
    </View>
  </RCTScrollView>
</View>
`;

exports[`TEST ON FOOD COMPONENT MEAL AND MEAL DIARY: Test Meal Expansion 1`] = `
<View>
  <RCTScrollView>
    <View>
      <View
        style={
          Object {
            "alignContent": "center",
            "flexDirection": "column",
            "justifyContent": "space-around",
          }
        }
      >
        <View
          style={
            Object {
              "alignContent": "center",
              "alignSelf": "center",
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "alignContent": "stretch",
                  "alignSelf": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-evenly",
                  "marginVertical": 10,
                }
              }
            >
              <Text
                style={
                  Object {
                    "alignSelf": "center",
                    "marginHorizontal": 10,
                  }
                }
              >
                [FORMATTED DATE]
              </Text>
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/calendar.png",
                  }
                }
                style={
                  Object {
                    "bottom": 10,
                    "height": 32,
                    "position": "relative",
                    "top": 0,
                    "width": 32,
                  }
                }
              />
            </View>
            <View />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignContent": "center",
            "flexDirection": "column",
            "justifyContent": "space-around",
          }
        }
      />
      <RCTSafeAreaView
        emulateUnlessSupported={true}
        style={
          Object {
            "backgroundColor": "#fff",
            "borderRadius": 15,
            "elevation": 4,
            "flexDirection": "column",
            "justifyContent": "center",
            "marginBottom": 20,
            "marginLeft": "5%",
            "shadowColor": "#000",
            "shadowOffset": Object {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.23,
            "shadowRadius": 2.62,
            "width": "90%",
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "width": "100%",
            }
          }
        >
          <View
            activeOpacity={0.2}
            style={
              Object {
                "flex": 1,
                "flexDirection": "column",
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "flexDirection": "row",
                  "opacity": 1,
                }
              }
              testID="MealID"
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/breakfast.png",
                  }
                }
                style={
                  Object {
                    "alignSelf": "center",
                    "height": 20,
                    "marginLeft": 10,
                    "width": 20,
                  }
                }
              />
              <Text
                style={
                  Object {
                    "alignSelf": "flex-start",
                    "fontSize": 20,
                    "fontWeight": "bold",
                    "justifyContent": "flex-start",
                    "marginLeft": 5,
                    "marginRight": 10,
                    "marginVertical": "14%",
                  }
                }
              >
                Breakfast
              </Text>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "flexShrink": 1,
                    "justifyContent": "flex-end",
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "baseline",
                "flexDirection": "row",
                "flexShrink": 1,
                "justifyContent": "flex-end",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/insuline.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/calories.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0.0
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/carbohydrates.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0.0
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/fat.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0.0
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/protein.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0.0
              </Text>
            </View>
          </View>
        </View>
        <View>
          <RCTScrollView>
            <View>
              <RCTScrollView
                data={Array []}
                getItem={[Function]}
                getItemCount={[Function]}
                horizontal={true}
                keyExtractor={[Function]}
                onContentSizeChange={[Function]}
                onLayout={[Function]}
                onMomentumScrollBegin={[Function]}
                onMomentumScrollEnd={[Function]}
                onScroll={[Function]}
                onScrollBeginDrag={[Function]}
                onScrollEndDrag={[Function]}
                removeClippedSubviews={false}
                renderItem={[Function]}
                scrollEventThrottle={50}
                stickyHeaderIndices={Array []}
                style={Object {}}
                viewabilityConfigCallbackPairs={Array []}
              >
                <View />
              </RCTScrollView>
              <RCTScrollView
                data={Array []}
                getItem={[Function]}
                getItemCount={[Function]}
                horizontal={true}
                keyExtractor={[Function]}
                onContentSizeChange={[Function]}
                onLayout={[Function]}
                onMomentumScrollBegin={[Function]}
                onMomentumScrollEnd={[Function]}
                onScroll={[Function]}
                onScrollBeginDrag={[Function]}
                onScrollEndDrag={[Function]}
                removeClippedSubviews={false}
                renderItem={[Function]}
                scrollEventThrottle={50}
                stickyHeaderIndices={Array []}
                style={Object {}}
                viewabilityConfigCallbackPairs={Array []}
              >
                <View />
              </RCTScrollView>
            </View>
          </RCTScrollView>
          <View
            style={
              Object {
                "alignContent": "center",
                "backgroundColor": "rgb(112,202,230)",
                "borderBottomEndRadius": 10,
                "borderBottomLeftRadius": 10,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "rgb(112,202,230)",
                  "borderRadius": 10,
                  "marginHorizontal": 5,
                }
              }
            >
              <View
                accessibilityState={
                  Object {
                    "disabled": false,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignSelf": "center",
                    "backgroundColor": "rgb(112,202,230)",
                    "borderRadius": 10,
                    "marginHorizontal": 5,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "alignSelf": "center",
                        "color": "#fff",
                        "fontSize": 18,
                        "fontWeight": "bold",
                        "textTransform": "uppercase",
                      },
                      null,
                    ]
                  }
                >
                  Add Sport
                </Text>
              </View>
            </View>
            <View>
              <Modal
                animationType="fade"
                hardwareAccelerated={false}
                onRequestClose={[Function]}
                transparent={true}
                visible={false}
              />
              <View
                accessibilityState={
                  Object {
                    "disabled": false,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
                testID="ImageButton"
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "rgb(112,202,230)",
                      "borderRadius": 100,
                      "elevation": 8,
                      "height": 64,
                      "marginRight": 7,
                      "paddingHorizontal": 12,
                      "paddingVertical": 12,
                      "width": 64,
                    }
                  }
                >
                  <Image
                    source={
                      Object {
                        "testUri": "../../../src/assets/dose.png",
                      }
                    }
                    style={
                      Object {
                        "height": 40,
                        "width": 40,
                      }
                    }
                  />
                </View>
              </View>
            </View>
            <View
              style={
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "rgb(112,202,230)",
                  "borderRadius": 10,
                  "marginHorizontal": 5,
                }
              }
            >
              <View
                accessibilityState={
                  Object {
                    "disabled": false,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignSelf": "center",
                    "backgroundColor": "rgb(112,202,230)",
                    "borderRadius": 10,
                    "marginHorizontal": 5,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "alignSelf": "center",
                        "color": "#fff",
                        "fontSize": 18,
                        "fontWeight": "bold",
                        "textTransform": "uppercase",
                      },
                      null,
                    ]
                  }
                >
                  Add Food
                </Text>
              </View>
            </View>
          </View>
        </View>
      </RCTSafeAreaView>
      <RCTSafeAreaView
        emulateUnlessSupported={true}
        style={
          Object {
            "backgroundColor": "#fff",
            "borderRadius": 15,
            "elevation": 4,
            "flexDirection": "column",
            "justifyContent": "center",
            "marginBottom": 20,
            "marginLeft": "5%",
            "shadowColor": "#000",
            "shadowOffset": Object {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.23,
            "shadowRadius": 2.62,
            "width": "90%",
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "width": "100%",
            }
          }
        >
          <View
            activeOpacity={0.2}
            style={
              Object {
                "flex": 1,
                "flexDirection": "column",
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "flexDirection": "row",
                  "opacity": 1,
                }
              }
              testID="MealID"
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/lunch.png",
                  }
                }
                style={
                  Object {
                    "alignSelf": "center",
                    "height": 20,
                    "marginLeft": 10,
                    "width": 20,
                  }
                }
              />
              <Text
                style={
                  Object {
                    "alignSelf": "flex-start",
                    "fontSize": 20,
                    "fontWeight": "bold",
                    "justifyContent": "flex-start",
                    "marginLeft": 5,
                    "marginRight": 10,
                    "marginVertical": "14%",
                  }
                }
              >
                Lunch
              </Text>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "flexShrink": 1,
                    "justifyContent": "flex-end",
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "baseline",
                "flexDirection": "row",
                "flexShrink": 1,
                "justifyContent": "flex-end",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/insuline.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/calories.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0.0
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/carbohydrates.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0.0
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/fat.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0.0
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/protein.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0.0
              </Text>
            </View>
          </View>
        </View>
      </RCTSafeAreaView>
      <RCTSafeAreaView
        emulateUnlessSupported={true}
        style={
          Object {
            "backgroundColor": "#fff",
            "borderRadius": 15,
            "elevation": 4,
            "flexDirection": "column",
            "justifyContent": "center",
            "marginBottom": 20,
            "marginLeft": "5%",
            "shadowColor": "#000",
            "shadowOffset": Object {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.23,
            "shadowRadius": 2.62,
            "width": "90%",
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "width": "100%",
            }
          }
        >
          <View
            activeOpacity={0.2}
            style={
              Object {
                "flex": 1,
                "flexDirection": "column",
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "flexDirection": "row",
                  "opacity": 1,
                }
              }
              testID="MealID"
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/dinner.png",
                  }
                }
                style={
                  Object {
                    "alignSelf": "center",
                    "height": 20,
                    "marginLeft": 10,
                    "width": 20,
                  }
                }
              />
              <Text
                style={
                  Object {
                    "alignSelf": "flex-start",
                    "fontSize": 20,
                    "fontWeight": "bold",
                    "justifyContent": "flex-start",
                    "marginLeft": 5,
                    "marginRight": 10,
                    "marginVertical": "14%",
                  }
                }
              >
                Dinner
              </Text>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "flexShrink": 1,
                    "justifyContent": "flex-end",
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "baseline",
                "flexDirection": "row",
                "flexShrink": 1,
                "justifyContent": "flex-end",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/insuline.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/calories.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0.0
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/carbohydrates.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0.0
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/fat.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0.0
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/protein.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0.0
              </Text>
            </View>
          </View>
        </View>
      </RCTSafeAreaView>
      <RCTSafeAreaView
        emulateUnlessSupported={true}
        style={
          Object {
            "backgroundColor": "#fff",
            "borderRadius": 15,
            "elevation": 4,
            "flexDirection": "column",
            "justifyContent": "center",
            "marginBottom": 20,
            "marginLeft": "5%",
            "shadowColor": "#000",
            "shadowOffset": Object {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.23,
            "shadowRadius": 2.62,
            "width": "90%",
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "width": "100%",
            }
          }
        >
          <View
            activeOpacity={0.2}
            style={
              Object {
                "flex": 1,
                "flexDirection": "column",
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "flexDirection": "row",
                  "opacity": 1,
                }
              }
              testID="MealID"
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/snack.png",
                  }
                }
                style={
                  Object {
                    "alignSelf": "center",
                    "height": 20,
                    "marginLeft": 10,
                    "width": 20,
                  }
                }
              />
              <Text
                style={
                  Object {
                    "alignSelf": "flex-start",
                    "fontSize": 20,
                    "fontWeight": "bold",
                    "justifyContent": "flex-start",
                    "marginLeft": 5,
                    "marginRight": 10,
                    "marginVertical": "14%",
                  }
                }
              >
                Snack
              </Text>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "flexShrink": 1,
                    "justifyContent": "flex-end",
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "baseline",
                "flexDirection": "row",
                "flexShrink": 1,
                "justifyContent": "flex-end",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/insuline.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/calories.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0.0
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/carbohydrates.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0.0
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/fat.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0.0
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                  "margin": 3,
                  "marginTop": 10,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/assets/protein.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "width": 30,
                  }
                }
              />
              <Text>
                0.0
              </Text>
            </View>
          </View>
        </View>
      </RCTSafeAreaView>
    </View>
  </RCTScrollView>
</View>
`;
